# cppsocket

./: CMakeLists.txt  README.md
example/: client.cpp  echoc.cpp  echos.cpp  server.cpp
include/: Socket.h  connection.h  http.h  socket.h  uni_socketIO.h
src/: Socket.cpp  client.cpp  connection.cpp  http.cpp  server.cpp  socket.cpp  socketIOunix.cpp  socketIOwin.cpp  testsocket.cpp
zlib/: CMakeLists.txt
